<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tab1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:layout_margin="14dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tab1_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="14dp"
            android:backgroundTint="@color/app_color_primary">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:layout_marginHorizontal="15dip"
                        android:text="@string/text_universitas_kuningan"
                        android:textSize="24dip" />


                    <ImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/logouniku" />

                    <TextView
                        android:id="@+id/tv_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_history_of_uniku"
                        android:textSize="16dip"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dip" />

                    <TextView
                        android:id="@+id/tv_content_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_content_history_of_uniku"
                        android:gravity="start|end"
                        android:layout_marginHorizontal="8dp"
                        android:textSize="12dip"
                        android:fontFamily="@font/poppins_medium"/>


                    <TextView
                        android:id="@+id/tv_visi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_visi"
                        android:textSize="16dip"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dip"/>

                    <TextView
                        android:id="@+id/tv_content_visi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:fontFamily="@font/poppins_medium_italic"
                        android:text="@string/text_content_visi"
                        android:textSize="12dip" />

                    <TextView
                        android:id="@+id/tv_misi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_misi"
                        android:textSize="16dip"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dip"/>

                    <TextView
                        android:id="@+id/tv_content_misi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_content_misi"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_gravity="center"
                        android:textSize="12dip"
                        android:layout_marginHorizontal="8dip"
                        android:layout_marginBottom="8dip"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>



</LinearLayout>